// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CommentCard Dark 1`] = `
<View
  bg="defaultBackground"
  py={3}
  style={
    Array [
      Object {
        "backgroundColor": "#262523",
        "paddingBottom": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    bg="defaultBackground"
    p={2}
    style={
      Array [
        Object {
          "backgroundColor": "#262523",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      borderRadius={4}
      flexDirection="row"
      mb={4}
      ml={null}
      mt={null}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "flexDirection": "row",
            "marginBottom": 20,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        borderRadius={50}
        height={32}
        mr={1}
        overflow="hidden"
        style={
          Array [
            Object {
              "borderRadius": 50,
              "height": 32,
              "marginRight": 5,
              "overflow": "hidden",
              "width": 32,
            },
          ]
        }
        width={32}
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": 80,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <View
          flexDirection="row"
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            backgroundColor="alternativeBackground"
            borderRadius={10}
            flexDirection="column"
            maxWidth="100%"
            minWidth={190}
            p={2}
            style={
              Array [
                Object {
                  "backgroundColor": "#32302E",
                  "borderRadius": 10,
                  "flexDirection": "column",
                  "maxWidth": "100%",
                  "minWidth": 190,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              alignItems="center"
              flexDirection="row"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                fontWeight="bold"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "fontWeight": "700",
                    },
                  ]
                }
              />
              <Text
                color="lightText"
                fontFamily="body"
                fontSize="2px"
                px={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 2,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                    },
                  ]
                }
              >
                ⬤
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                    },
                  ]
                }
              >
                30 phút trước
              </Text>
            </View>
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={2}
              pt="3px"
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "paddingTop": 3,
                  },
                ]
              }
            >
              Rất hay
            </Text>
            <View
              alignItems="center"
              backgroundColor="lightBackground"
              borderRadius={7.5}
              bottom={-10}
              flexDirection="row"
              height={15}
              position="absolute"
              px={1}
              right={2}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#5A5A5A",
                    "borderRadius": 7.5,
                    "bottom": -10,
                    "flexDirection": "row",
                    "height": 15,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "position": "absolute",
                    "right": 10,
                  },
                ]
              }
            >
              <View
                alignItems="center"
                height={10}
                justifyContent="center"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "height": 10,
                      "justifyContent": "center",
                      "width": 10,
                    },
                  ]
                }
                width={10}
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={10}
                  bbWidth={10}
                  fill="none"
                  focusable={false}
                  height={10}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 10,
                        "width": 10,
                      },
                    ]
                  }
                  vbHeight={15}
                  vbWidth={16}
                  width={10}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      clipRule={0}
                      d="M8 1.1C9.92 -0.47 12.77 -0.35 14.56 1.43C15.49 2.34 16 3.57 16 4.87C16 6.17 15.49 7.4 14.56 8.32L8.51 14.33C8.23 14.61 7.77 14.61 7.48 14.33L1.44 8.32C0.51 7.4 0 6.18 0 4.87C0 3.57 0.51 2.34 1.44 1.42C3.23 -0.36 6.08 -0.47 8 1.1Z"
                      fill={
                        Array [
                          1,
                          "paint1_linear",
                        ]
                      }
                      fillRule={0}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                    <RNSVGDefs>
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -15623794,
                            1,
                            -13045891,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint0_linear"
                        x1="15.4022"
                        x2="0.688721"
                        y1="0"
                        y2="0"
                      />
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -6022805,
                            1,
                            -235673,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint1_linear"
                        x1="10.5"
                        x2="10.5"
                        y1="10"
                        y2="0"
                      />
                    </RNSVGDefs>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                pl="2.5px"
                pt="2px"
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "paddingLeft": 2.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          flexDirection="column"
          marginTop="3px"
          ml={2}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "marginLeft": 10,
                "marginTop": 3,
              },
            ]
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Bình luận
              </Text>
            </View>
            <Text
              color="lightText"
              fontFamily="body"
              fontSize="2px"
              px={1}
              style={
                Array [
                  Object {
                    "color": "#AAAAAA",
                    "fontFamily": "Helvetica",
                    "fontSize": 2,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              ⬤
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Thích
              </Text>
            </View>
          </View>
        </View>
        <View
          ml={2}
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginTop": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={0}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Helvetica",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Xem thêm 
              1
               bình luận
            </Text>
          </View>
        </View>
        <View
          borderRadius={4}
          flexDirection="row"
          mb={null}
          ml={2}
          mt={2}
          overflow="hidden"
          position="relative"
          style={
            Array [
              Object {
                "borderRadius": 4,
                "flexDirection": "row",
                "marginLeft": 10,
                "marginTop": 10,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            borderRadius={50}
            height={24}
            mr={1}
            overflow="hidden"
            style={
              Array [
                Object {
                  "borderRadius": 50,
                  "height": 24,
                  "marginRight": 5,
                  "overflow": "hidden",
                  "width": 24,
                },
              ]
            }
            width={24}
          >
            <Image
              source={
                Object {
                  "uri": "https://via.placeholder.com/200",
                }
              }
              style={
                Object {
                  "height": 80,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            flex={1}
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              flexDirection="row"
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                backgroundColor="alternativeBackground"
                borderRadius={10}
                flexDirection="column"
                maxWidth="100%"
                minWidth={190}
                p={2}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#32302E",
                      "borderRadius": 10,
                      "flexDirection": "column",
                      "maxWidth": "100%",
                      "minWidth": 190,
                      "paddingBottom": 10,
                      "paddingLeft": 10,
                      "paddingRight": 10,
                      "paddingTop": 10,
                    },
                  ]
                }
              >
                <View
                  alignItems="center"
                  flexDirection="row"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                    ]
                  }
                >
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    fontWeight="bold"
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#AAAAAA",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                          "fontWeight": "700",
                        },
                      ]
                    }
                  />
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize="2px"
                    px={1}
                    style={
                      Array [
                        Object {
                          "color": "#AAAAAA",
                          "fontFamily": "Helvetica",
                          "fontSize": 2,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                        },
                      ]
                    }
                  >
                    ⬤
                  </Text>
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#AAAAAA",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                        },
                      ]
                    }
                  >
                    30 phút trước
                  </Text>
                </View>
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontSize={2}
                  pt="3px"
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontFamily": "Helvetica",
                        "fontSize": 14,
                        "paddingTop": 3,
                      },
                    ]
                  }
                >
                  Hay quá. bài hat  này khá tốt và ca sĩ có chất giọng cực kì hay
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      borderRadius={4}
      flexDirection="row"
      mb={4}
      ml={null}
      mt={null}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "flexDirection": "row",
            "marginBottom": 20,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        borderRadius={50}
        height={32}
        mr={1}
        overflow="hidden"
        style={
          Array [
            Object {
              "borderRadius": 50,
              "height": 32,
              "marginRight": 5,
              "overflow": "hidden",
              "width": 32,
            },
          ]
        }
        width={32}
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": 80,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <View
          flexDirection="row"
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            backgroundColor="alternativeBackground"
            borderRadius={10}
            flexDirection="column"
            maxWidth="100%"
            minWidth={190}
            p={2}
            style={
              Array [
                Object {
                  "backgroundColor": "#32302E",
                  "borderRadius": 10,
                  "flexDirection": "column",
                  "maxWidth": "100%",
                  "minWidth": 190,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              alignItems="center"
              flexDirection="row"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                fontWeight="bold"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "fontWeight": "700",
                    },
                  ]
                }
              />
              <Text
                color="lightText"
                fontFamily="body"
                fontSize="2px"
                px={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 2,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                    },
                  ]
                }
              >
                ⬤
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                    },
                  ]
                }
              >
                30 phút trước
              </Text>
            </View>
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={2}
              pt="3px"
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "paddingTop": 3,
                  },
                ]
              }
            >
              Rất hay
            </Text>
            <View
              alignItems="center"
              backgroundColor="lightBackground"
              borderRadius={7.5}
              bottom={-10}
              flexDirection="row"
              height={15}
              position="absolute"
              px={1}
              right={2}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#5A5A5A",
                    "borderRadius": 7.5,
                    "bottom": -10,
                    "flexDirection": "row",
                    "height": 15,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "position": "absolute",
                    "right": 10,
                  },
                ]
              }
            >
              <View
                alignItems="center"
                height={10}
                justifyContent="center"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "height": 10,
                      "justifyContent": "center",
                      "width": 10,
                    },
                  ]
                }
                width={10}
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={10}
                  bbWidth={10}
                  fill="none"
                  focusable={false}
                  height={10}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 10,
                        "width": 10,
                      },
                    ]
                  }
                  vbHeight={15}
                  vbWidth={16}
                  width={10}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      clipRule={0}
                      d="M8 1.1C9.92 -0.47 12.77 -0.35 14.56 1.43C15.49 2.34 16 3.57 16 4.87C16 6.17 15.49 7.4 14.56 8.32L8.51 14.33C8.23 14.61 7.77 14.61 7.48 14.33L1.44 8.32C0.51 7.4 0 6.18 0 4.87C0 3.57 0.51 2.34 1.44 1.42C3.23 -0.36 6.08 -0.47 8 1.1Z"
                      fill={
                        Array [
                          1,
                          "paint1_linear",
                        ]
                      }
                      fillRule={0}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                    <RNSVGDefs>
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -15623794,
                            1,
                            -13045891,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint0_linear"
                        x1="15.4022"
                        x2="0.688721"
                        y1="0"
                        y2="0"
                      />
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -6022805,
                            1,
                            -235673,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint1_linear"
                        x1="10.5"
                        x2="10.5"
                        y1="10"
                        y2="0"
                      />
                    </RNSVGDefs>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                pl="2.5px"
                pt="2px"
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "paddingLeft": 2.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          flexDirection="column"
          marginTop="3px"
          ml={2}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "marginLeft": 10,
                "marginTop": 3,
              },
            ]
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Bình luận
              </Text>
            </View>
            <Text
              color="lightText"
              fontFamily="body"
              fontSize="2px"
              px={1}
              style={
                Array [
                  Object {
                    "color": "#AAAAAA",
                    "fontFamily": "Helvetica",
                    "fontSize": 2,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              ⬤
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Thích
              </Text>
            </View>
          </View>
        </View>
        <View
          ml={2}
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginTop": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={0}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Helvetica",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Xem thêm 
              1
               bình luận
            </Text>
          </View>
        </View>
        <View
          borderRadius={4}
          flexDirection="row"
          mb={null}
          ml={2}
          mt={2}
          overflow="hidden"
          position="relative"
          style={
            Array [
              Object {
                "borderRadius": 4,
                "flexDirection": "row",
                "marginLeft": 10,
                "marginTop": 10,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            borderRadius={50}
            height={24}
            mr={1}
            overflow="hidden"
            style={
              Array [
                Object {
                  "borderRadius": 50,
                  "height": 24,
                  "marginRight": 5,
                  "overflow": "hidden",
                  "width": 24,
                },
              ]
            }
            width={24}
          >
            <Image
              source={
                Object {
                  "uri": "https://via.placeholder.com/200",
                }
              }
              style={
                Object {
                  "height": 80,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            flex={1}
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              flexDirection="row"
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                backgroundColor="alternativeBackground"
                borderRadius={10}
                flexDirection="column"
                maxWidth="100%"
                minWidth={190}
                p={2}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#32302E",
                      "borderRadius": 10,
                      "flexDirection": "column",
                      "maxWidth": "100%",
                      "minWidth": 190,
                      "paddingBottom": 10,
                      "paddingLeft": 10,
                      "paddingRight": 10,
                      "paddingTop": 10,
                    },
                  ]
                }
              >
                <View
                  alignItems="center"
                  flexDirection="row"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                    ]
                  }
                >
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    fontWeight="bold"
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#AAAAAA",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                          "fontWeight": "700",
                        },
                      ]
                    }
                  />
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize="2px"
                    px={1}
                    style={
                      Array [
                        Object {
                          "color": "#AAAAAA",
                          "fontFamily": "Helvetica",
                          "fontSize": 2,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                        },
                      ]
                    }
                  >
                    ⬤
                  </Text>
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#AAAAAA",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                        },
                      ]
                    }
                  >
                    30 phút trước
                  </Text>
                </View>
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontSize={2}
                  pt="3px"
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontFamily": "Helvetica",
                        "fontSize": 14,
                        "paddingTop": 3,
                      },
                    ]
                  }
                >
                  Hay quá. bài hat  này khá tốt và ca sĩ có chất giọng cực kì hay
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CommentCard Light 1`] = `
<View
  bg="defaultBackground"
  py={3}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "paddingBottom": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    bg="defaultBackground"
    p={2}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      borderRadius={4}
      flexDirection="row"
      mb={4}
      ml={null}
      mt={null}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "flexDirection": "row",
            "marginBottom": 20,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        borderRadius={50}
        height={32}
        mr={1}
        overflow="hidden"
        style={
          Array [
            Object {
              "borderRadius": 50,
              "height": 32,
              "marginRight": 5,
              "overflow": "hidden",
              "width": 32,
            },
          ]
        }
        width={32}
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": 80,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <View
          flexDirection="row"
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            backgroundColor="alternativeBackground"
            borderRadius={10}
            flexDirection="column"
            maxWidth="100%"
            minWidth={190}
            p={2}
            style={
              Array [
                Object {
                  "backgroundColor": "#F1F1F1",
                  "borderRadius": 10,
                  "flexDirection": "column",
                  "maxWidth": "100%",
                  "minWidth": 190,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              alignItems="center"
              flexDirection="row"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                fontWeight="bold"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "fontWeight": "700",
                    },
                  ]
                }
              />
              <Text
                color="lightText"
                fontFamily="body"
                fontSize="2px"
                px={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 2,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                    },
                  ]
                }
              >
                ⬤
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                    },
                  ]
                }
              >
                30 phút trước
              </Text>
            </View>
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={2}
              pt="3px"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "paddingTop": 3,
                  },
                ]
              }
            >
              Rất hay
            </Text>
            <View
              alignItems="center"
              backgroundColor="lightBackground"
              borderRadius={7.5}
              bottom={-10}
              flexDirection="row"
              height={15}
              position="absolute"
              px={1}
              right={2}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#EEEEEE",
                    "borderRadius": 7.5,
                    "bottom": -10,
                    "flexDirection": "row",
                    "height": 15,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "position": "absolute",
                    "right": 10,
                  },
                ]
              }
            >
              <View
                alignItems="center"
                height={10}
                justifyContent="center"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "height": 10,
                      "justifyContent": "center",
                      "width": 10,
                    },
                  ]
                }
                width={10}
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={10}
                  bbWidth={10}
                  fill="none"
                  focusable={false}
                  height={10}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 10,
                        "width": 10,
                      },
                    ]
                  }
                  vbHeight={15}
                  vbWidth={16}
                  width={10}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      clipRule={0}
                      d="M8 1.1C9.92 -0.47 12.77 -0.35 14.56 1.43C15.49 2.34 16 3.57 16 4.87C16 6.17 15.49 7.4 14.56 8.32L8.51 14.33C8.23 14.61 7.77 14.61 7.48 14.33L1.44 8.32C0.51 7.4 0 6.18 0 4.87C0 3.57 0.51 2.34 1.44 1.42C3.23 -0.36 6.08 -0.47 8 1.1Z"
                      fill={
                        Array [
                          1,
                          "paint1_linear",
                        ]
                      }
                      fillRule={0}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                    <RNSVGDefs>
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -15623794,
                            1,
                            -13045891,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint0_linear"
                        x1="15.4022"
                        x2="0.688721"
                        y1="0"
                        y2="0"
                      />
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -6022805,
                            1,
                            -235673,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint1_linear"
                        x1="10.5"
                        x2="10.5"
                        y1="10"
                        y2="0"
                      />
                    </RNSVGDefs>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                pl="2.5px"
                pt="2px"
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "paddingLeft": 2.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          flexDirection="column"
          marginTop="3px"
          ml={2}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "marginLeft": 10,
                "marginTop": 3,
              },
            ]
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Bình luận
              </Text>
            </View>
            <Text
              color="lightText"
              fontFamily="body"
              fontSize="2px"
              px={1}
              style={
                Array [
                  Object {
                    "color": "#676767",
                    "fontFamily": "Helvetica",
                    "fontSize": 2,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              ⬤
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Thích
              </Text>
            </View>
          </View>
        </View>
        <View
          ml={2}
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginTop": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={0}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Xem thêm 
              1
               bình luận
            </Text>
          </View>
        </View>
        <View
          borderRadius={4}
          flexDirection="row"
          mb={null}
          ml={2}
          mt={2}
          overflow="hidden"
          position="relative"
          style={
            Array [
              Object {
                "borderRadius": 4,
                "flexDirection": "row",
                "marginLeft": 10,
                "marginTop": 10,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            borderRadius={50}
            height={24}
            mr={1}
            overflow="hidden"
            style={
              Array [
                Object {
                  "borderRadius": 50,
                  "height": 24,
                  "marginRight": 5,
                  "overflow": "hidden",
                  "width": 24,
                },
              ]
            }
            width={24}
          >
            <Image
              source={
                Object {
                  "uri": "https://via.placeholder.com/200",
                }
              }
              style={
                Object {
                  "height": 80,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            flex={1}
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              flexDirection="row"
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                backgroundColor="alternativeBackground"
                borderRadius={10}
                flexDirection="column"
                maxWidth="100%"
                minWidth={190}
                p={2}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#F1F1F1",
                      "borderRadius": 10,
                      "flexDirection": "column",
                      "maxWidth": "100%",
                      "minWidth": 190,
                      "paddingBottom": 10,
                      "paddingLeft": 10,
                      "paddingRight": 10,
                      "paddingTop": 10,
                    },
                  ]
                }
              >
                <View
                  alignItems="center"
                  flexDirection="row"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                    ]
                  }
                >
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    fontWeight="bold"
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#676767",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                          "fontWeight": "700",
                        },
                      ]
                    }
                  />
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize="2px"
                    px={1}
                    style={
                      Array [
                        Object {
                          "color": "#676767",
                          "fontFamily": "Helvetica",
                          "fontSize": 2,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                        },
                      ]
                    }
                  >
                    ⬤
                  </Text>
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#676767",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                        },
                      ]
                    }
                  >
                    30 phút trước
                  </Text>
                </View>
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontSize={2}
                  pt="3px"
                  style={
                    Array [
                      Object {
                        "color": "#262523",
                        "fontFamily": "Helvetica",
                        "fontSize": 14,
                        "paddingTop": 3,
                      },
                    ]
                  }
                >
                  Hay quá. bài hat  này khá tốt và ca sĩ có chất giọng cực kì hay
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      borderRadius={4}
      flexDirection="row"
      mb={4}
      ml={null}
      mt={null}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "flexDirection": "row",
            "marginBottom": 20,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        borderRadius={50}
        height={32}
        mr={1}
        overflow="hidden"
        style={
          Array [
            Object {
              "borderRadius": 50,
              "height": 32,
              "marginRight": 5,
              "overflow": "hidden",
              "width": 32,
            },
          ]
        }
        width={32}
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": 80,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <View
          flexDirection="row"
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            backgroundColor="alternativeBackground"
            borderRadius={10}
            flexDirection="column"
            maxWidth="100%"
            minWidth={190}
            p={2}
            style={
              Array [
                Object {
                  "backgroundColor": "#F1F1F1",
                  "borderRadius": 10,
                  "flexDirection": "column",
                  "maxWidth": "100%",
                  "minWidth": 190,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
          >
            <View
              alignItems="center"
              flexDirection="row"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                fontWeight="bold"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "fontWeight": "700",
                    },
                  ]
                }
              />
              <Text
                color="lightText"
                fontFamily="body"
                fontSize="2px"
                px={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 2,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                    },
                  ]
                }
              >
                ⬤
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                    },
                  ]
                }
              >
                30 phút trước
              </Text>
            </View>
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={2}
              pt="3px"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "paddingTop": 3,
                  },
                ]
              }
            >
              Rất hay
            </Text>
            <View
              alignItems="center"
              backgroundColor="lightBackground"
              borderRadius={7.5}
              bottom={-10}
              flexDirection="row"
              height={15}
              position="absolute"
              px={1}
              right={2}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#EEEEEE",
                    "borderRadius": 7.5,
                    "bottom": -10,
                    "flexDirection": "row",
                    "height": 15,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "position": "absolute",
                    "right": 10,
                  },
                ]
              }
            >
              <View
                alignItems="center"
                height={10}
                justifyContent="center"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "height": 10,
                      "justifyContent": "center",
                      "width": 10,
                    },
                  ]
                }
                width={10}
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={10}
                  bbWidth={10}
                  fill="none"
                  focusable={false}
                  height={10}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 10,
                        "width": 10,
                      },
                    ]
                  }
                  vbHeight={15}
                  vbWidth={16}
                  width={10}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      clipRule={0}
                      d="M8 1.1C9.92 -0.47 12.77 -0.35 14.56 1.43C15.49 2.34 16 3.57 16 4.87C16 6.17 15.49 7.4 14.56 8.32L8.51 14.33C8.23 14.61 7.77 14.61 7.48 14.33L1.44 8.32C0.51 7.4 0 6.18 0 4.87C0 3.57 0.51 2.34 1.44 1.42C3.23 -0.36 6.08 -0.47 8 1.1Z"
                      fill={
                        Array [
                          1,
                          "paint1_linear",
                        ]
                      }
                      fillRule={0}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                    <RNSVGDefs>
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -15623794,
                            1,
                            -13045891,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint0_linear"
                        x1="15.4022"
                        x2="0.688721"
                        y1="0"
                        y2="0"
                      />
                      <RNSVGLinearGradient
                        gradient={
                          Array [
                            0,
                            -6022805,
                            1,
                            -235673,
                          ]
                        }
                        gradientTransform={null}
                        gradientUnits={1}
                        name="paint1_linear"
                        x1="10.5"
                        x2="10.5"
                        y1="10"
                        y2="0"
                      />
                    </RNSVGDefs>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={0}
                pl="2.5px"
                pt="2px"
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 10,
                      "paddingLeft": 2.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          flexDirection="column"
          marginTop="3px"
          ml={2}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "marginLeft": 10,
                "marginTop": 3,
              },
            ]
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Bình luận
              </Text>
            </View>
            <Text
              color="lightText"
              fontFamily="body"
              fontSize="2px"
              px={1}
              style={
                Array [
                  Object {
                    "color": "#676767",
                    "fontFamily": "Helvetica",
                    "fontSize": 2,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              ⬤
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                fontWeight="bold"
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Thích
              </Text>
            </View>
          </View>
        </View>
        <View
          ml={2}
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginTop": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={0}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 10,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Xem thêm 
              1
               bình luận
            </Text>
          </View>
        </View>
        <View
          borderRadius={4}
          flexDirection="row"
          mb={null}
          ml={2}
          mt={2}
          overflow="hidden"
          position="relative"
          style={
            Array [
              Object {
                "borderRadius": 4,
                "flexDirection": "row",
                "marginLeft": 10,
                "marginTop": 10,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            borderRadius={50}
            height={24}
            mr={1}
            overflow="hidden"
            style={
              Array [
                Object {
                  "borderRadius": 50,
                  "height": 24,
                  "marginRight": 5,
                  "overflow": "hidden",
                  "width": 24,
                },
              ]
            }
            width={24}
          >
            <Image
              source={
                Object {
                  "uri": "https://via.placeholder.com/200",
                }
              }
              style={
                Object {
                  "height": 80,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            flex={1}
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              flexDirection="row"
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                backgroundColor="alternativeBackground"
                borderRadius={10}
                flexDirection="column"
                maxWidth="100%"
                minWidth={190}
                p={2}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#F1F1F1",
                      "borderRadius": 10,
                      "flexDirection": "column",
                      "maxWidth": "100%",
                      "minWidth": 190,
                      "paddingBottom": 10,
                      "paddingLeft": 10,
                      "paddingRight": 10,
                      "paddingTop": 10,
                    },
                  ]
                }
              >
                <View
                  alignItems="center"
                  flexDirection="row"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                    ]
                  }
                >
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    fontWeight="bold"
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#676767",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                          "fontWeight": "700",
                        },
                      ]
                    }
                  />
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize="2px"
                    px={1}
                    style={
                      Array [
                        Object {
                          "color": "#676767",
                          "fontFamily": "Helvetica",
                          "fontSize": 2,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                        },
                      ]
                    }
                  >
                    ⬤
                  </Text>
                  <Text
                    color="lightText"
                    fontFamily="body"
                    fontSize={0}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#676767",
                          "fontFamily": "Helvetica",
                          "fontSize": 10,
                        },
                      ]
                    }
                  >
                    30 phút trước
                  </Text>
                </View>
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontSize={2}
                  pt="3px"
                  style={
                    Array [
                      Object {
                        "color": "#262523",
                        "fontFamily": "Helvetica",
                        "fontSize": 14,
                        "paddingTop": 3,
                      },
                    ]
                  }
                >
                  Hay quá. bài hat  này khá tốt và ca sĩ có chất giọng cực kì hay
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
